# POS

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  MANUAL_QA.md  POS_Features_to_add.md  PROJECT_SCOPE.md  Possible_features.md  README.md  Untitled-1.json  database.py  goal structure.md  main.py  my_pos.db  pos.py  project.db  pyproject.toml  requirements.txt  run.py  run_pos.bat  run_test.bat  setup.py  test_phase45.py  work_items.db  work_items.json
.cursor/rules/: 01_priority guidelines.mdc  02_Interaction Guidelines.mdc  03_technical guidelines.mdc  04_phase-spec guidelines.mdc  05_implementation_checklist.mdc  0pen first.mdc  python_env_management.mdc  textual_devtools.mdc
.penv/: pyvenv.cfg
.penv/Scripts/: activate  activate.bat
OLDFASTAPIATTEMPT/: project structure.md
OLDFASTAPIATTEMPT/templates/: index.html
assets/: pos.css
data/backups/: work_items_20250224_145846_v.011.db
data/db/: work_items.db
data/prefs/: table_prefs.json
data/validation_results/: item_creation_20250521_213429.json  item_creation_20250521_213623.json  item_creation_20250521_214427.json  item_creation_20250521_214532.json  item_creation_20250522_170118.json  item_creation_20250522_172936.json  item_creation_via_form_20250522_170118.json  item_creation_via_form_20250522_172936.json  item_editing_20250521_213429.json  item_editing_20250521_213623.json  item_editing_20250521_214427.json  item_editing_20250521_214533.json  item_editing_20250522_170118.json  item_editing_20250522_172936.json  item_listing_and_viewing_20250522_170115.json  item_listing_and_viewing_20250522_170120.json  item_listing_and_viewing_20250522_172937.json  link_management_20250522_170120.json  link_management_20250522_172937.json  link_navigation_20250522_170120.json  link_navigation_20250522_172938.json  optimistic_ui_updates_20250521_213429.json  optimistic_ui_updates_20250521_213623.json  optimistic_ui_updates_20250521_214427.json  optimistic_ui_updates_20250521_214533.json  optimistic_ui_updates_20250522_170118.json  optimistic_ui_updates_20250522_172936.json  ui_components_20250522_170047.json  ui_components_20250522_170118.json  ui_components_20250522_170139.json  ui_components_20250522_170204.json  ui_components_20250522_170233.json  ui_components_20250522_172936.json
docs/: CHANGELOG.md  Features to Add.md  IMPLEMENTATION_PLAN.md  PROJECT_SCOPE.md  checklist.md  from previous Chat.md  parallel_tasks.md  textual_devtools.md  ui_ux_review.md  validation_protocols.md
docs/archived/: PROJECT_SCOPE_CLI.md  TEST_PLAN.md
manual_scripts/: test_cli.py  test_link_commands_manual.py
pos/: work_items.db
pos/src/: __init__.py  backup.py  cli.py  database.py  display.py  migrate.py  models.py  storage.py
src/: __init__.py  app.py  backup.py  cli.py  config.py  database.py  display.py  launcher.py  migrate.py  migrations.py  models.py  schemas.py  storage.py  textual_ui.css  textual_ui.py  thought_manager.py
src/assets/: pos.css  pos.tcss  thought.tcss
static/: style.css
t/: main.py
templates/: index.html
tests/: __init__.py  debug_test.py  simple_test.py  test_add_thought_command.py  test_cleanup_backups.py  test_cli.py  test_item_entry_form.py  test_item_links.py  test_item_tags.py  test_link_commands.py  test_link_commands_manual.py  test_link_tree.py  test_link_tree_manual.py  test_list_thoughts.py  test_main.py  test_phase45.py  test_restore_command.py  test_search_thoughts.py  test_tag_commands.py  test_tags.py  test_thought_item.py  test_unified_add_command.py
widgets/: __init__.py  item_form.py
(+88 files in other folders)
