[project]
name = "pos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textual>=2.1.2",
    "rich>=13.9.4"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pre-commit",
  "mypy",
  "ruff",
  "black",
  "isort"
]

[tool.mypy]
ignore_missing_imports = true

[tool.isort]
profile = "black"
