[project]
name = "pos"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textual==2.1.2",
    "rich>=13.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pre-commit",
  "mypy",
  "ruff",
  "black",
  "isort"
]

test = [
  "pytest"
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

