[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pos"
version = "0.4.0" #
description = "A terminal-based personal task and knowledge management system built with Python and the Textual framework." #
readme = "README.md"
requires-python = ">=3.12" # Based on your requirements.txt comment
license = { text = "MIT" } # Or choose your preferred license
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
maintainers = [
    { name = "Your Name", email = "your.email@example.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License", # Or your chosen license
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Utilities",
]
keywords = ["task management", "knowledge base", "tui", "textual", "personal productivity"]

dependencies = [
    "textual==3.2.0",         #
    "rich==13.9.4",           #
    "typing_extensions==4.12.2", #
    "colorama==0.4.6",        #
    "Pygments==2.19.1",       #
    "platformdirs==4.3.6",    #
    "markdown-it-py==3.0.0",  #
    "MarkupSafe==3.0.2",      #
    "importlib_metadata==8.6.1", #
    "pydantic>=1.10,<3.0" # Used in models.py and schemas.py
]

# Defines command-line scripts
[project.scripts]
pos = "main:main" # Assumes main.py in the root, runs main() function

# Defines module entry points
[project.entry-points."console_scripts"]
# If you prefer to run the TUI primarily as `pos-tui`
# pos-tui = "src.pos_tui.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",      # Test files use pytest
    "ruff>=0.1.0",      # Suggested linter/formatter
    "black>=23.0",      # Code formatter
    "mypy>=1.0",        # Type checker
]

[tool.setuptools.packages.find]
where = ["src"] # Locates packages under the src directory

[tool.setuptools.package-data]
"src.pos_tui.styles" = ["*.css"] #
"src.pos_tui.validation" = ["*.md"] #

# --- Tool Configurations ---

[tool.ruff]
line-length = 88
select = ["E", "W", "F", "I", "UP", "B", "C4", "PT", "RUF"] # Common selections, including Ruff-specific rules
ignore = ["E501"] # Ignored by Black

[tool.ruff.isort]
known-first-party = ["src"]

[tool.black]
line-length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
packages = ["src"]
# Add other mypy settings as needed

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = [
    "tests",
]
# Add other pytest configurations as needed